--- a/client/index.html
+++ b/client/index.html
@@ -16,9 +16,18 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge, chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title ng-bind="($title || 'Home') + ' · GPQuery'" ng-cloak>GPQuery</title>
+    <title ng-bind="docTitle + ' · GPQuery'" ng-cloak>Loading...</title>
 
     <base href="/">
+
+
+
+
+    <!-- Inline Styles
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+    <style>
+    </style>
 
 
 
@@ -49,6 +58,14 @@
 
 
 
+    <!-- Stylesheet & Font CDNs
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
+
+
+
+
     <!-- Inject Styles & Modernizr
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
@@ -67,9 +84,13 @@
     <!-- build:js(client) scripts/modernizr.js -->
     <script src="../bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
+
+
+
+
   </head>
 
-  <body ng-class="$bodyClass || 'site-default'" class="gpquery hamburg">
+  <body ng-class="bodyClass || 'site-default'" class="gpquery hamburg">
 
 
 
@@ -85,196 +106,31 @@
     <!-- Page Wrapper
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-    <div id="page-wrapper" ng-class="{'open': app.sidebar}" ng-cloak>
+    <div id="page-wrapper" ng-class="{'open': app.sidebar.isOpen}" ng-cloak ng-include="'app/app.html'"></div>
+
+    <!--
+    <div id="page-wrapper"
+         ng-class="{'open': app.sidebar.isOpen}"
+         ng-cloak>
 
 
+      <gp-sidebar>
+      </gp-sidebar>
 
-
-
-
-
-
-      <!-- Sidebar
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-      <div id="sidebar-wrapper" ng-controller="SidebarController as vm">
-
-
-
-
-        <!-- Sidebar Main
-        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-        <ul class="sidebar">
-          <li class="sidebar-main">
-            <a ng-click="vm.toggleSidebar()">
-              Dashboard
-              <span class="menu-icon glyphicon glyphicon-transfer"></span>
-            </a>
-          </li>
-          <li class="sidebar-title"><span>NAVIGATION</span></li>
-          <li class="sidebar-list">
-            <a href="#">Dashboard <span class="menu-icon fa fa-tachometer"></span></a>
-          </li>
-          <li class="sidebar-list">
-            <a href="#/tables">Tables <span class="menu-icon fa fa-table"></span></a>
-          </li>
-        </ul>
-
-        <!-- ––––––––––––––––––––––––––––––––––––––––––––– -->
-
-
-
-
-        <!-- Sidebar Footer
-        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-        <div class="sidebar-footer">
-          <div class="col-xs-4">
-            <a href="https://github.com/rdash/rdash-angular" target="_blank">
-              Github
-            </a>
-          </div>
-          <div class="col-xs-4">
-            <a href="https://github.com/rdash/rdash-angular/blob/master/README.md" target="_blank">
-              About
-            </a>
-          </div>
-          <div class="col-xs-4">
-            <a href="#">
-              Support
-            </a>
-          </div>
-        </div>
-
-        <!-- ––––––––––––––––––––––––––––––––––––––––––––– -->
-
-
-
-
-      </div>
-
-      <!-- End Sidebar ––––––––––––––––––––––––––––––––– -->
-
-
-
-
-
-
-
-
-      <!-- Content Wrapper
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
       <div id="content-wrapper">
         <div class="page-content">
 
+          <gp-header-bar></gp-header-bar>
 
-
-
-          <!-- Header Bar
-          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-          <div class="row header">
-            <div class="col-xs-12">
-
-
-              <!-- User Menu
-              –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-              <div class="user pull-right">
-                <div class="item dropdown" uib-dropdown>
-                  <a href="#" class="dropdown-toggle" uib-dropdown-toggle>
-                    <img src="assets/images/avatar.jpg">
-                  </a>
-                  <ul class="dropdown-menu dropdown-menu-right">
-                    <li class="dropdown-header">
-                      Joe Bloggs
-                    </li>
-                    <li class="divider"></li>
-                    <li class="link">
-                      <a href="#">
-                        Profile
-                      </a>
-                    </li>
-                    <li class="link">
-                      <a href="#">
-                        Menu Item
-                      </a>
-                    </li>
-                    <li class="link">
-                      <a href="#">
-                        Menu Item
-                      </a>
-                    </li>
-                    <li class="divider"></li>
-                    <li class="link">
-                      <a href="#">
-                        Logout
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="item dropdown" uib-dropdown>
-                 <a href="#" class="dropdown-toggle" uib-dropdown-toggle>
-                    <i class="fa fa-bell-o"></i>
-                  </a>
-                  <ul class="dropdown-menu dropdown-menu-right">
-                    <li class="dropdown-header">
-                      Notifications
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                      <a href="#">Server Down!</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-
-              <!-- Title & Breadcrumbs
-              –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-              <div class="meta">
-                <div class="page">
-                  Dashboard
-                </div>
-                <div class="breadcrumb-links">
-                  Home / Dashboard
-                </div>
-              </div>
-
-
-            </div>
-          </div>
-
-          <!-- End Header Bar –––––––––––––––––––––––––––––– -->
-
-
-
-
-          <!-- Main Content
-          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-          <div ui-view></div>
-
-          <!-- End Main Content –––––––––––––––––––––––––––– -->
-
-
-
+          <div ui-view class="site-ui-view"></div>
 
         </div>
       </div>
 
-      <!-- End Content Wrapper ––––––––––––––––––––––––– -->
-
-
-
-
-
-
-
 
     </div>
+    -->
 
     <!-- End Page Wrapper –––––––––––––––––––––––––––– -->
 
@@ -314,6 +170,9 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
+
+
+
 
   </body>
 </html>
